2006-08-21  Clytie Siddall <clytie@riverland.net.au>

	* vi.po: Updated Vietnamese translation.

2006-08-16  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
	
	* ru.po: Updated Russian translation by
	Alexandre Prokoudine <alexandre.prokoudine@gmail.com>

2006-08-16  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Translation updated.

2006-08-15  Jordi Mas <jmas@softcatala.org>

	* ca.po: Updated Catalan translation

2006-08-12  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es.po: Updated Spanish translation by María Majadas.

2006-08-11  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>

	* da.po: Updated Danish translation.

2006-08-09  Ilkka Tuohela  <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2006-08-07  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.
	
2006-08-07  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Updated Czech translation.

2006-08-06  Hendrik Richter  <hendrikr@gnome.org>

	* de.po: Updated German translation, by
	         Daniel Schindler <daniel@vcard24.de>

2006-08-05  Aaron Bockover  <abock@gnome.org>

	* POTFILES.in: Updated 

2006-08-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* th.po: Updated Thai translation.

2006-08-03  Jovan Naumovski  <jovan@lugola.net>

	* mk.po: Updated Macedonian translation.

2006-08-02  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>

	* da.po: Updated Danish translation.

2006-08-02  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Updated Czech translation.

2006-08-02  Øivind Hoel  <ohoel@cvs.gnome.org>

	* nb.po: Updated Norwegian Bokmål translation.
	* POTFILES.in: Removed src/AboutBox.cs and src/Dialogs.cs, 
	added src/Banshee.Base/Gui/AboutDialog.cs

2006-07-31  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Updated Czech translation.

2006-07-31  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es.po: Updated Spanish translation by María Majadas.

2006-07-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* th.po: Updated Thai translation.
