@@ -1,3 +1,7 @@
+2006-08-26  Aaron Bockover  <abock@gnome.org>
+
+	* POTFILES.in: Updated
+
 2006-08-21  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
